--- a/react_and_webpack/package.json
+++ b/react_and_webpack/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
