--- a/react_and_webpack/package.json
+++ b/react_and_webpack/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^7.0.3",
+    "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
