--- a/redux-basic-tutorial-todos/package.json
+++ b/redux-basic-tutorial-todos/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.1.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
