--- a/redux-advanced-tutorial-async/package.json
+++ b/redux-advanced-tutorial-async/package.json
@@ -22,6 +22,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
