--- a/redux-advanced-tutorial-async/package.json
+++ b/redux-advanced-tutorial-async/package.json
@@ -25,6 +25,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
     "typescript": "~3.7.2"
   },
   "scripts": {
