--- a/learnstorybook.com-intro/taskbox/package.json
+++ b/learnstorybook.com-intro/taskbox/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "chromatic --project-token=mip8cdinvoo"
   },
   "eslintConfig": {
     "extends": "react-app"
