--- a/redux-basic-tutorial-todos/package.json
+++ b/redux-basic-tutorial-todos/package.json
@@ -11,8 +11,12 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.3.19",
     "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-backgrounds": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-viewport": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.1.2",
     "@storybook/react": "^5.3.19",
@@ -25,6 +29,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/storybook__addon-a11y": "^5.1.2",
+    "@types/storybook__addon-backgrounds": "^5.2.1",
+    "@types/storybook__addon-knobs": "^5.2.1",
+    "@types/storybook__addon-viewport": "^5.2.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
