--- a/redux-basic-tutorial-todos/package.json
+++ b/redux-basic-tutorial-todos/package.json
@@ -24,7 +24,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
+    "@types/jest": "^26.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -34,6 +34,8 @@
     "@types/storybook__addon-backgrounds": "^5.2.1",
     "@types/storybook__addon-knobs": "^5.2.1",
     "@types/storybook__addon-viewport": "^5.2.1",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
