--- a/redux-basic-tutorial-todos/package.json
+++ b/redux-basic-tutorial-todos/package.json
@@ -24,6 +24,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -34,6 +35,9 @@
     "@types/storybook__addon-backgrounds": "^5.2.1",
     "@types/storybook__addon-knobs": "^5.2.1",
     "@types/storybook__addon-viewport": "^5.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
     "typescript": "~3.7.2"
