--- a/redux-basic-tutorial-todos/package.json
+++ b/redux-basic-tutorial-todos/package.json
@@ -25,6 +25,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
