--- a/redux-basic-tutorial-todos/package.json
+++ b/redux-basic-tutorial-todos/package.json
@@ -41,7 +41,7 @@
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "<4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
