--- a/jest-sandbox/package.json
+++ b/jest-sandbox/package.json
@@ -14,5 +14,8 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "log4js": "^6.3.0"
   }
 }
