--- a/playwright-jest-example/package.json
+++ b/playwright-jest-example/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
     "jest-playwright-preset": "^1.4.5",
     "playwright": "^1.8.0",
     "ts-jest": "^26.4.4",
